--- a/DemirWerbig/css/herstellung.css
+++ b/DemirWerbig/css/herstellung.css
@@ -7,9 +7,11 @@ body{
 .navbar {
     overflow: hidden;
     background-color: #001E3C;
+    width: 100%;
 }
 
 .navbar a {
+
     float: left;
     font-size: 30px;
     color: white;
@@ -33,7 +35,7 @@ body{
 
 }
 #titelmitte{
-    position: relative;
+    position: absolute;
     color: red;
     font-size: 50px;
     font-weight: bold;
@@ -53,7 +55,7 @@ body{
     font: normal 18px sans-serif;
 
     padding: 45px;
-    margin-top: 80px;
+    margin-top: 13%;
 }
 
 .footer-basic-centered .footer-company-motto{
@@ -88,6 +90,74 @@ body{
 }
 
 #abstand{
+    padding: 10px;
+    height: auto;
+}
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+   margin: auto;
+}
 
-    height: 500px;
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 30%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
