--- a/DemirWerbig/css/index.css
+++ b/DemirWerbig/css/index.css
@@ -53,18 +53,16 @@ body{
     text-decoration: none;
 
 }
-video::-webkit-media-controls-panel{
 
-}
 #video{
-
-    overflow: hidden;
+    outline: none;
     margin-top: 5%;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%  ;
+
+
     height: 550px;
 }
 
